# LABS_MMUD

./: CMakeLists.txt  LABS_requirements.txt  README.md  build_lab3.ps1  test_priv_key.pem  test_pub_key.pem  test_pub_key.pem_meta.json
Lab1_Symmetric/: .aestool_nonce_registry.json  BUILD_FIX_SUMMARY.md  CLEANUP_REPORT.md  CMakeLists.txt  MSVC_BUILD_FIX.md  OPTIMIZATION_SUMMARY.md  README.md  VERIFICATION_CHECKLIST.md  gui_qt6.py
Lab1_Symmetric/SampleData/: vectors.json
Lab1_Symmetric/include/: dll_export.hpp
Lab1_Symmetric/src/: benchmark.cpp  crypto_engine.cpp  crypto_engine.hpp  dll_wrapper.cpp  main.cpp  tests.cpp  utils.cpp  utils.hpp  vectors.json.bak
Lab1_Symmetric/test_vectors/: vectors.json
Lab3_RSA_Hybrid/: BUILD_GUIDE.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  bm_meta.json  bm_priv.pem  bm_pub.pem  gui_qt6.py
Lab3_RSA_Hybrid/include/: dll_export.hpp
Lab3_RSA_Hybrid/src/: benchmark.cpp  benchmark.hpp  benchmark_main.cpp  dll_wrapper.cpp  hybrid_engine.cpp  hybrid_engine.hpp  main.cpp  rsa_engine.cpp  rsa_engine.hpp  tests.cpp  utils.cpp  utils.hpp
Lab3_RSA_Hybrid/test/: output.txt
Lab3_RSA_Hybrid/test_vectors/: hybrid_kats.json  rsa_oaep_kats.json
Lab4_Hash_PKI/: CMakeLists.txt  README.md  build_lab4.bat  build_mingw.bat  cmake_build_output.txt  cmake_output.txt  gui_qt6.py  mingw_config.txt
Lab4_Hash_PKI/build_mingw/: CMakeCache.txt
Lab4_Hash_PKI/demo/md5_collision/: README.txt  prog_a.cpp  prog_b.cpp
Lab4_Hash_PKI/demo/tls/: apache_ecdsa.conf  nginx_ecdsa.conf  setup_tls.sh
Lab4_Hash_PKI/demo/tls/certs/: ca_cert.pem  ca_cert.srl  ca_key.pem  server.csr  server_cert.pem  server_ext.cnf  server_key.pem
Lab4_Hash_PKI/include/: dll_export.hpp
Lab4_Hash_PKI/scripts/: build_mingw.sh  mingw-x86_64-w64.cmake
Lab4_Hash_PKI/src/: applink.c  benchmark.cpp  benchmark.hpp  benchmark_main.cpp  dll_wrapper.cpp  hash_engine.cpp  hash_engine.hpp  length_ext.cpp  length_ext.hpp  main.cpp  tests.cpp  utils.cpp  utils.hpp  x509_parser.cpp  x509_parser.hpp
Lab4_Hash_PKI/test_vectors/: md5_kats.json  sha2_kats.json  sha3_kats.json
Lab5_Digital_Sigs/: CMakeLists.txt  README.md  gui_qt6.py
Lab5_Digital_Sigs/include/: dll_export.hpp
Lab5_Digital_Sigs/src/: benchmark.cpp  benchmark.hpp  benchmark_main.cpp  dll_wrapper.cpp  main.cpp  sig_engine.cpp  sig_engine.hpp  tests.cpp  utils.cpp  utils.hpp
Lab5_Digital_Sigs/test_vectors/: sig_kats.json
Lab6_PQC/: CMakeLists.txt  README.md  gui_qt6.py
Lab6_PQC/include/: dll_export.hpp
Lab6_PQC/src/: benchmark.cpp  benchmark.hpp  benchmark_main.cpp  dll_wrapper.cpp  main.cpp  pq_engine.cpp  pq_engine.hpp  tests.cpp  utils.cpp  utils.hpp
Lab6_PQC/test_vectors/: pq_kats.json
